Fixed contrast on IMDB.html
Fixed color contrast between the white and yellow text on imdb.html by changing the color of the text to the darker variable

--- a/imdb/style2.css
+++ b/imdb/style2.css
@@ -28,6 +28,9 @@ h1 {
     color: white;
     font-size: 1.5rem;
 }
+.yellow{
+    color: var(--dark);
+}
 h2 {
     font-family: futura-pt, sans-serif;
     font-weight: 500; /* heavy */
@@ -61,7 +64,7 @@ h3 a {
 
 .main a:visited {
     font-size: 1.5rem;
-    color: var(--h1);
+    color: var(--h2);
 }
 
 .secondary a {
@@ -98,7 +101,7 @@ a {
     font-family: futura-pt, sans-serif;
     font-weight: 500; /* heavy */
     font-style: normal;
-    color: var(--accent1);
+    color: var(--dark);
     text-transform: uppercase;
     font-size: .9rem;
 }
@@ -106,7 +109,7 @@ a:visited {
     font-family: futura-pt, sans-serif;
     font-weight: 500; /* heavy */
     font-style: normal;
-    color: var(--h1);
+    color: var(--h2);
     text-transform: uppercase;
     font-size: .9rem;
 }
